remove latitude and longitude for Restaurant
